--- a/ClientApp/css/site.css
+++ b/ClientApp/css/site.css
@@ -1,3 +1,16 @@
+html {
+    background-color: #f9f9f9;
+  }
+.row {
+    background-color:#f9f9f9;
+}
+
+.wrapper {
+    background-color:black;
+    width:100%;
+    height:100%;
+}
+
 .main-nav li .glyphicon {
     margin-right: 10px;
 }
@@ -71,8 +84,13 @@
 }
 
 .card {
-    padding:0.5em;
+    padding:1em;
+    padding-top:0.8em;
+    padding-bottom:0.2em;
+    padding-left:1em;
+    padding-right:1em;
+    background-color:#FFF;
     border:1px solid #CCC;
-    border-radius:0.2em;
+    border-radius:0.4em;
     margin-bottom:0.2em;
 }
